<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:appcompat="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="td.quang.vnplayer.views.activities.MainActivity">
    <item
        android:id="@+id/action_searchc"
        android:icon="@drawable/ic_search_white_24dp"
        android:itemTextAppearance="@style/myCustomMenuTextApearance"
        android:title="@string/action_search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always"
        tools:ignore="AppCompatResource">

    </item>
    <item
        android:orderInCategory="100"
        android:title="@string/action_schedule"/>
    <item
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
