<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/control"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:background="@color/colorPrimary"
    android:clickable="true">

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <td.quang.vnplayer.views.customviews.MyButton
            android:id="@+id/btnHome"
            style="@style/SelectableItemBackgroundLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic_music"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:srcCompat="@drawable/ic_music_note_white_24dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="-:--"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <td.quang.vnplayer.views.customviews.MyButton
                android:id="@+id/btnPrev"
                style="@style/SelectableItemBackgroundLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ic_prev"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:srcCompat="@drawable/ic_skip_previous_white_24dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <td.quang.vnplayer.views.customviews.MyButton
            android:id="@+id/btnSuffer"
            style="@style/SelectableItemBackgroundLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic_suffer"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:srcCompat="@drawable/ic_shuffle_white_24dp" />

    </LinearLayout>

    <td.quang.vnplayer.views.customviews.MyButton
        android:id="@+id/btnPlay"
        style="@style/SelectableItemBackgroundLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ic_play"
        android:textColor="@color/colorAccent"
        android:textSize="80sp"
        app:srcCompat="@drawable/ic_play_circle_outline_white_48dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"

        android:orientation="vertical">

        <td.quang.vnplayer.views.customviews.MyButton
            android:id="@+id/btnList"
            style="@style/SelectableItemBackgroundLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic_playlist"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:srcCompat="@drawable/ic_playlist_play_white_24dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <td.quang.vnplayer.views.customviews.MyButton
                android:id="@+id/btnNext"
                style="@style/SelectableItemBackgroundLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ic_next"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:srcCompat="@drawable/ic_skip_next_white_24dp" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="-:--"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <td.quang.vnplayer.views.customviews.MyButton
            android:id="@+id/btnRepeat"
            style="@style/SelectableItemBackgroundLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic_repeat"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>