<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true">


    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingStart="12dp">

        <TextView
            android:id="@+id/tvHeadTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="-"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold"/>

        <TextView
            android:id="@+id/tvHeadArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="-"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <!--<include
    android:id="@+id/barPlaying"
    layout="@layout/layout_bar_playing"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_alignParentStart="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/colorPrimary"/>-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/barPlaying"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/btnBarPlay"
            style="@style/SelectableItemBackgroundLight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/no_image_loaded"
            app:srcCompat="@drawable/ic_play_circle_outline_white_24dp"/>

        <ImageView
            android:id="@+id/ivBarThumb"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:contentDescription="@string/no_image_loaded"
            android:padding="2dp"
            app:srcCompat="@drawable/icon_thumbnail"/>

        <LinearLayout
            android:id="@+id/llLayoutBarDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"

            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/ivBarThumb"
            android:layout_toLeftOf="@id/btnBarPlay"
            android:layout_toRightOf="@+id/ivBarThumb"
            android:layout_toStartOf="@id/btnBarPlay"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"/>

            <TextView
                android:id="@+id/tvBarArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </RelativeLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerPlaying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBarTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/heading">
    </android.support.v4.view.ViewPager>

    <com.cleveroad.audiovisualization.GLAudioVisualizationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/visualizer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/viewPagerPlaying"
        app:av_backgroundColor="@color/colorPrimary"
        app:av_bubblesPerLayer="30"
        app:av_bubblesRandomizeSizes="true"
        app:av_bubblesSize="40dp"
        app:av_layersCount="1"
        app:av_wavesCount="9"
        app:av_wavesFooterHeight="40dp"
        app:av_wavesHeight="100dp"
        />

    <LinearLayout
        xmlns:app="http://schemas.android.com/tools"
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:clickable="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <td.quang.vnplayer.views.customviews.MyButton
                android:id="@+id/btnHome"
                style="@style/SelectableItemBackgroundLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ic_music"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:srcCompat="@drawable/ic_music_note_white_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCurrentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="-:--"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"/>

                <td.quang.vnplayer.views.customviews.MyButton
                    android:id="@+id/btnPrev"
                    style="@style/SelectableItemBackgroundLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ic_prev"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    app:srcCompat="@drawable/ic_skip_previous_white_24dp"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <td.quang.vnplayer.views.customviews.MyButton
                android:id="@+id/btnShuffle"
                style="@style/SelectableItemBackgroundLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ic_suffer"
                android:textColor="@color/colorAccentDark"
                android:textSize="30sp"
                app:srcCompat="@drawable/ic_shuffle_white_24dp"/>

        </LinearLayout>

        <td.quang.vnplayer.views.customviews.MyButton
            android:id="@+id/btnPlay"
            style="@style/SelectableItemBackgroundLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ic_play"
            android:textColor="@color/colorAccent"
            android:textSize="80sp"
            app:srcCompat="@drawable/ic_play_circle_outline_white_48dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="vertical">

            <td.quang.vnplayer.views.customviews.MyButton
                android:id="@+id/btnList"
                style="@style/SelectableItemBackgroundLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ic_playlist"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:srcCompat="@drawable/ic_playlist_play_white_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <td.quang.vnplayer.views.customviews.MyButton
                    android:id="@+id/btnNext"
                    style="@style/SelectableItemBackgroundLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ic_next"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    app:srcCompat="@drawable/ic_skip_next_white_24dp"/>

                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="-:--"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <td.quang.vnplayer.views.customviews.MyButton
                android:id="@+id/btnRepeat"
                style="@style/SelectableItemBackgroundLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ic_repeat"
                android:textColor="@color/colorAccentDark"
                android:textSize="30sp"/>
        </LinearLayout>


    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/control"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"/>

</RelativeLayout>